<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/ic_home">

    </item>

    <item
        android:id="@+id/ic_network"
        android:icon="@drawable/ic_network"
        android:title="@string/ic_network">

    </item>

    <item
        android:id="@+id/ic_messaging"
        android:icon="@drawable/ic_messaging"
        android:title="@string/ic_messaging">

    </item>

    <item
        android:id="@+id/ic_alert"
        android:icon="@drawable/ic_alert"
        android:title="@string/ic_alert">

    </item>

    <item
        android:id="@+id/ic_jobs"
        android:icon="@drawable/ic_jobs"
        android:title="@string/ic_jobs">

    </item>



</menu>